@@ -62,11 +62,12 @@ define lineno
       set $__p = $__p + 1
       if ($__ad > $__lasti)
 	set $__continue = 0
+      else
+        set $__li = $__li + *$__p
+        set $__p = $__p + 1
       end
-      set $__li = $__li + *$__p
-      set $__p = $__p + 1
     end
-    printf "%d", $__li
+    printf "%d\n", $__li
 end
 
 # print the current frame - verbose
