@@ -1,5 +1,5 @@
 import re
-
+import sys
 
 # Write the config.c file
 
@@ -38,7 +38,6 @@ def makeconfig(infp, outfp, modules, with_ifdef=0):
 # Test program.
 
 def test():
-    import sys
     if not sys.argv[3:]:
         print('usage: python makeconfig.py config.c.in outputfile', end=' ')
         print('modulename ...')
