@@ -134,12 +134,14 @@ def realwork(vars, moddefns, target):
     print() ; print()
 
     print("$(target)$(debug_suffix)%s: $(temp_dir) $(OBJS)" % (target_ext))
-    print("\tlink -out:$(target)$(debug_suffix)%s %s" % (target_ext, target_link_flags), end=' ')
-    print("\t$(OBJS) \\")
-    print("\t$(LIBS) \\")
-    print("\t$(ADDN_LINK_FILES) \\")
-    print("\t$(pythonlib) $(lcustom) $(l_debug)\\")
+    print("\tlink -out:$(target)$(debug_suffix)%s %s" %
+          (target_ext, target_link_flags), "@<<")
+    print("\t$(OBJS)")
+    print("\t$(LIBS)")
+    print("\t$(ADDN_LINK_FILES)")
+    print("\t$(pythonlib) $(lcustom) $(l_debug)")
     print("\t$(resources)")
+    print("<<")
     print()
     print("clean:")
     print("\t-rm -f *.obj")
